* Fix product list mis-alignment

--- a/client/public/assets/css/home/product_area.css
+++ b/client/public/assets/css/home/product_area.css
@@ -95,6 +95,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     flex-wrap: wrap;
 }
 .naviagte-buttons{
